--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <ul class="navbar-nav nav-dropdown">
           <li class="nav-item"><a class="nav-link link text-white display-4" href="#features13-2">What is CazeMC?</a></li>
           <li class="nav-item"><a class="nav-link link text-white display-4" href="#features24-4">How to Join</a></li>
-          <li class="nav-item"><a class="nav-link link text-white display-4" href="https://https://discord.gg/6r3qN5KGNk" target="_blank">Support</a></li>
+          <li class="nav-item"><a class="nav-link link text-white display-4" href="https://discord.com/invite/6r3qN5KGNk" target="_blank">Support</a></li>
           <li class="nav-item"><a class="nav-link link text-white display-4" href="rules.html">Rules</a></li>
         </ul>
-        <div class="navbar-buttons mbr-section-btn">
-          <a class="btn btn-primary display-4" href="store.html" 
+        <div class="navbar-buttons mbr-section-btn"><a class="btn btn-info display-4" href="staff.html">Staff</a> 
+          <a class="btn btn-primary display-4" href="store.html"> 
             <span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span> Store
           </a>
         </div>
@@ -96,7 +96,7 @@
           <div class="card-box align-left">
             <h4 class="card-title mbr-fonts-style mb-4 display-2"><strong>What is CazeMC?</strong></h4>
             <p class="mbr-text mbr-fonts-style display-7">
-              CazeMC is the world’s largest Minecraft server network, home to original and unique games loved by millions. From intense PvP battles in Bed Wars and SkyWars to creative survival in SkyBlock, there’s something for everyone. We support versions 1.8 through 1.21+.
+              CazeMC is the world’s largest Minecraft server network, home to original and unique games loved by millions. Featuring Lifesteal and other game modes there’s something for everyone. We support versions 1.12 through 1.21+.
             </p>
           </div>
         </div>
@@ -247,16 +247,13 @@
       <div class="col-md-12 col-lg-6 my-auto px-4 align-left">
         <p class="mbr-text text-grey mb-0 mbr-fonts-style display-7">
           © 2025 CazeMC Network. All rights reserved.<br>
-          <a href="imprint.html" class="text-primary">Imprint</a> | 
-          <a href="privacy.html" class="text-primary">Privacy Policy</a> | 
-          <a href="tos.html" class="text-primary">Terms of Service</a>
+   
         </p>
       </div>
       <div class="col-md-12 col-lg-6 px-4 align-right">
         <div class="social-list">
-          <a href="https://twitter.com/Hypixel" target="_blank"><span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span></a>
-          <a href="https://youtube.com/Hypixel" target="_blank"><span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span></a>
-          <a href="https://discord.gg/hypixel" target="_blank"><span class="mbr-iconfont mbr-iconfont-social socicon-discord socicon"></span></a>
+          <a href="https://youtube.com" target="_blank"><span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span></a>
+          <a href="https://discord.gg/6r3qN5KGNk" target="_blank"><span class="mbr-iconfont mbr-iconfont-social socicon-discord socicon"></span></a>
         </div>
       </div>
     </div>
