--- a/store.html
+++ b/store.html
@@ -475,7 +475,7 @@
     <div class="row mt-5 g-4">
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card-wrapper text-center p-4">
-          <img src="https://i.imgur.com/3xV0Y1v.png" alt="VIP Rank" class="mb-3">
+          <img src="https://cdn.tip4serv.com/shops-img/172776d2f0395173ba24afa42b75ae12f54e0.webp" alt="VIP Rank" class="mb-3">
           <h5 class="card-title mbr-fonts-style display-5"><strong>VIP Rank</strong></h5>
           <p class="mbr-text mbr-fonts-style display-4">₹50.00</p>
           <button onclick="addToCart('VIP Rank', 50)" class="btn btn-primary display-4">Add to Cart</button>
@@ -483,7 +483,7 @@
       </div>
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card-wrapper text-center p-4">
-          <img src="https://i.imgur.com/DpC0i6k.png" alt="MVP Rank" class="mb-3">
+          <img src="https://cdn.tip4serv.com/shops-img/172776343d399dcbb7a625ca1b14ee0f64723.webp" alt="MVP Rank" class="mb-3">
           <h5 class="card-title mbr-fonts-style display-5"><strong>MVP Rank</strong></h5>
           <p class="mbr-text mbr-fonts-style display-4">₹100.00</p>
           <button onclick="addToCart('MVP Rank', 100)" class="btn btn-primary display-4">Add to Cart</button>
@@ -491,7 +491,7 @@
       </div>
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card-wrapper text-center p-4">
-          <img src="https://i.imgur.com/HY3Y7TJ.png" alt="ELITE Rank" class="mb-3">
+          <img src="https://cdn.tip4serv.com/shops-img/172778f97d11f19c2fa60898f1ffda1bafe99.webp" alt="ELITE Rank" class="mb-3">
           <h5 class="card-title mbr-fonts-style display-5"><strong>ELITE Rank</strong></h5>
           <p class="mbr-text mbr-fonts-style display-4">₹150.00</p>
           <button onclick="addToCart('ELITE Rank', 150)" class="btn btn-primary display-4">Add to Cart</button>
@@ -499,7 +499,7 @@
       </div>
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card-wrapper text-center p-4">
-          <img src="https://i.imgur.com/qK0XYEv.png" alt="IMMORTAL Rank" class="mb-3">
+          <img src="https://cdn.tip4serv.com/shops-img/172777c15f9e7bb68b091436a8c9e902f66ab.webp" alt="IMMORTAL Rank" class="mb-3">
           <h5 class="card-title mbr-fonts-style display-5"><strong>IMMORTAL Rank</strong></h5>
           <p class="mbr-text mbr-fonts-style display-4">₹200.00</p>
           <button onclick="addToCart('IMMORTAL Rank', 200)" class="btn btn-primary display-4">Add to Cart</button>
@@ -507,7 +507,7 @@
       </div>
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card-wrapper text-center p-4">
-          <img src="https://i.imgur.com/xvKc3tA.png" alt="CAZER Rank" class="mb-3">
+          <img src="https://cdn.tip4serv.com/shops-img/172774fb4399052f7361f6a60aba48e44630d.webp" alt="CAZER Rank" class="mb-3">
           <h5 class="card-title mbr-fonts-style display-5"><strong>CAZER Rank</strong></h5>
           <p class="mbr-text mbr-fonts-style display-4">₹250.00</p>
           <button onclick="addToCart('CAZER Rank', 250)" class="btn btn-primary display-4">Add to Cart</button>
@@ -525,7 +525,7 @@
     <div class="row mt-5 g-4">
       <div class="col-12 col-md-6 col-lg-3">
         <div class="card-wrapper text-center p-4">
-          <img src="https://i.imgur.com/IdkS7QF.png" alt="1 Million" class="mb-3">
+          <img src="https://cdn.tip4serv.com/shops-img/17277f81fda807f0b93ff50afba05da69af25.webp" alt="1 Million" class="mb-3">
           <h5 class="card-title mbr-fonts-style display-5">1 Million</h5>
           <p class="mbr-text mbr-fonts-style display-4">₹40.00</p>
           <button onclick="addToCart('1 Million Money', 40)" class="btn btn-primary display-4">Add</button>
@@ -533,7 +533,7 @@
       </div>
       <div class="col-12 col-md-6 col-lg-3">
         <div class="card-wrapper text-center p-4">
-          <img src="https://i.imgur.com/ZkZclnS.png" alt="2 Million" class="mb-3">
+          <img src="https://cdn.tip4serv.com/shops-img/17277f81fda807f0b93ff50afba05da69af25.webp" alt="2 Million" class="mb-3">
           <h5 class="card-title mbr-fonts-style display-5">2 Million</h5>
           <p class="mbr-text mbr-fonts-style display-4">₹85.00</p>
           <button onclick="addToCart('2 Million Money', 85)" class="btn btn-primary display-4">Add</button>
@@ -541,7 +541,7 @@
       </div>
       <div class="col-12 col-md-6 col-lg-3">
         <div class="card-wrapper text-center p-4">
-          <img src="https://i.imgur.com/fE9Vh4g.png" alt="4 Million" class="mb-3">
+          <img src="https://cdn.tip4serv.com/shops-img/17277f81fda807f0b93ff50afba05da69af25.webp" alt="4 Million" class="mb-3">
           <h5 class="card-title mbr-fonts-style display-5">4 Million</h5>
           <p class="mbr-text mbr-fonts-style display-4">₹160.00</p>
           <button onclick="addToCart('4 Million Money', 160)" class="btn btn-primary display-4">Add</button>
@@ -549,7 +549,7 @@
       </div>
       <div class="col-12 col-md-6 col-lg-3">
         <div class="card-wrapper text-center p-4">
-          <img src="https://i.imgur.com/bbNwKZ6.png" alt="8 Million" class="mb-3">
+          <img src="https://cdn.tip4serv.com/shops-img/17277f81fda807f0b93ff50afba05da69af25.webp" alt="8 Million" class="mb-3">
           <h5 class="card-title mbr-fonts-style display-5">8 Million</h5>
           <p class="mbr-text mbr-fonts-style display-4">₹300.00</p>
           <button onclick="addToCart('8 Million Money', 300)" class="btn btn-primary display-4">Add</button>
@@ -557,7 +557,7 @@
       </div>
       <div class="col-12 col-md-6 col-lg-3 offset-lg-3">
         <div class="card-wrapper text-center p-4">
-          <img src="https://i.imgur.com/tMyCw9F.png" alt="16 Million" class="mb-3">
+          <img src="https://cdn.tip4serv.com/shops-img/17277f81fda807f0b93ff50afba05da69af25.webp" alt="16 Million" class="mb-3">
           <h5 class="card-title mbr-fonts-style display-5">16 Million</h5>
           <p class="mbr-text mbr-fonts-style display-4">₹580.00</p>
           <button onclick="addToCart('16 Million Money', 580)" class="btn btn-primary display-4">Add</button>
@@ -575,11 +575,11 @@
           <h3 class="mbr-section-title mbr-fonts-style mb-0 display-2"><strong>Coins</strong></h3>
         </div>
         <div class="row mt-4 g-4">
-          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://i.imgur.com/lTzRYb6.png" class="mb-3"><h5>100 Coins</h5><p>₹20.00</p><button onclick="addToCart('100 Coins', 20)" class="btn btn-primary">Add</button></div></div>
-          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://i.imgur.com/JB9FZJh.png" class="mb-3"><h5>500 Coins</h5><p>₹40.00</p><button onclick="addToCart('500 Coins', 40)" class="btn btn-primary">Add</button></div></div>
-          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://i.imgur.com/qFpiKzB.png" class="mb-3"><h5>1000 Coins</h5><p>₹90.00</p><button onclick="addToCart('1000 Coins', 90)" class="btn btn-primary">Add</button></div></div>
-          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://i.imgur.com/gD2HDnT.png" class="mb-3"><h5>1500 Coins</h5><p>₹130.00</p><button onclick="addToCart('1500 Coins', 130)" class="btn btn-primary">Add</button></div></div>
-          <div class="col-12 col-md-6 offset-md-3"><div class="card-wrapper text-center p-4"><img src="https://i.imgur.com/LO0QKhq.png" class="mb-3"><h5>2000 Coins</h5><p>₹180.00</p><button onclick="addToCart('2000 Coins', 180)" class="btn btn-primary">Add</button></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://cdn.tip4serv.com/shops-img/1727709955bc9dbe027c2e45d236501fe88b0.webp" class="mb-3"><h5>100 Coins</h5><p>₹20.00</p><button onclick="addToCart('100 Coins', 20)" class="btn btn-primary">Add</button></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://cdn.tip4serv.com/shops-img/172777dea81a384b1082052b9418f0c2eb03f.webp" class="mb-3"><h5>500 Coins</h5><p>₹40.00</p><button onclick="addToCart('500 Coins', 40)" class="btn btn-primary">Add</button></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://cdn.tip4serv.com/shops-img/1727738af814437663a19fbf5979f00874476.webp" class="mb-3"><h5>1000 Coins</h5><p>₹90.00</p><button onclick="addToCart('1000 Coins', 90)" class="btn btn-primary">Add</button></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://cdn.tip4serv.com/shops-img/17277921d05a9f6f2ac23404afdf5894af897.webp" class="mb-3"><h5>1500 Coins</h5><p>₹130.00</p><button onclick="addToCart('1500 Coins', 130)" class="btn btn-primary">Add</button></div></div>
+          <div class="col-12 col-md-6 offset-md-3"><div class="card-wrapper text-center p-4"><img src="https://cdn.tip4serv.com/shops-img/172779717cf45b7c6c39bbc2acfaff4bbca92.webp" class="mb-3"><h5>2000 Coins</h5><p>₹180.00</p><button onclick="addToCart('2000 Coins', 180)" class="btn btn-primary">Add</button></div></div>
         </div>
       </div>
 
@@ -588,11 +588,11 @@
           <h3 class="mbr-section-title mbr-fonts-style mb-0 display-2"><strong>Crate Keys (Free)</strong></h3>
         </div>
         <div class="row mt-4 g-4">
-          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://i.imgur.com/6PjJKrY.png" class="mb-3"><h5>1 Key</h5><p>Free</p><button onclick="addToCart('1 Key', 0)" class="btn btn-success">Add</button></div></div>
-          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://i.imgur.com/UiDg0gC.png" class="mb-3"><h5>2 Keys</h5><p>Free</p><button onclick="addToCart('2 Keys', 0)" class="btn btn-success">Add</button></div></div>
-          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://i.imgur.com/Dg3p9kR.png" class="mb-3"><h5>3 Keys</h5><p>Free</p><button onclick="addToCart('3 Keys', 0)" class="btn btn-success">Add</button></div></div>
-          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://i.imgur.com/MXk7vJQ.png" class="mb-3"><h5>4 Keys</h5><p>Free</p><button onclick="addToCart('4 Keys', 0)" class="btn btn-success">Add</button></div></div>
-          <div class="col-12 col-md-6 offset-md-3"><div class="card-wrapper text-center p-4"><img src="https://i.imgur.com/Zm0lG1R.png" class="mb-3"><h5>5 Keys</h5><p>Free</p><button onclick="addToCart('5 Keys', 0)" class="btn btn-success">Add</button></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://cdn.tip4serv.com/shops-img/172775d63f6edc42582c2ea8acb3546d6e1a3.webp" class="mb-3"><h5>1 Key</h5><p>Free</p><button onclick="addToCart('1 Key', 0)" class="btn btn-success">Add</button></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://cdn.tip4serv.com/shops-img/17277f05def81bdf6f08822125edcb3c2586f.webp" class="mb-3"><h5>2 Keys</h5><p>Free</p><button onclick="addToCart('2 Keys', 0)" class="btn btn-success">Add</button></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://cdn.tip4serv.com/shops-img/1727729258ca7733bd70c29afd13323a78023.webp" class="mb-3"><h5>3 Keys</h5><p>Free</p><button onclick="addToCart('3 Keys', 0)" class="btn btn-success">Add</button></div></div>
+          <div class="col-12 col-md-6"><div class="card-wrapper text-center p-4"><img src="https://cdn.tip4serv.com/shops-img/1727792d55b1f67c7748a499e99dd450e811c.webp" class="mb-3"><h5>4 Keys</h5><p>Free</p><button onclick="addToCart('4 Keys', 0)" class="btn btn-success">Add</button></div></div>
+          <div class="col-12 col-md-6 offset-md-3"><div class="card-wrapper text-center p-4"><img src="https://cdn.tip4serv.com/shops-img/172779a19abdc65e18a46e0dc56b830c96a92.webp" class="mb-3"><h5>5 Keys</h5><p>Free</p><button onclick="addToCart('5 Keys', 0)" class="btn btn-success">Add</button></div></div>
         </div>
       </div>
     </div>
