--- a/store.html
+++ b/store.html
@@ -555,7 +555,7 @@
           <button onclick="addToCart('8 Million Money', 300)" class="btn btn-primary display-4">Add</button>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-3 offset-lg-3">
+      <div class="col-12 col-md-6 col-lg-3">
         <div class="card-wrapper text-center p-4">
           <img src="https://cdn.tip4serv.com/shops-img/17277f81fda807f0b93ff50afba05da69af25.webp" alt="16 Million" class="mb-3">
           <h5 class="card-title mbr-fonts-style display-5">16 Million</h5>
