--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="card-box align-left">
             <h4 class="card-title mbr-fonts-style mb-4 display-2"><strong>What is CazeMC?</strong></h4>
             <p class="mbr-text mbr-fonts-style display-7">
-              CazeMC is the world’s largest Minecraft server network, home to original and unique games loved by millions. Featuring Lifesteal and other game modes there’s something for everyone. We support versions 1.12 through 1.21+.
+              CazeMC is the Minecraft server network Featuring Lifesteal and other game modes there’s something for everyone. We support versions 1.12 through 1.21+.
             </p>
           </div>
         </div>
