--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li class="nav-item"><a class="nav-link link text-white display-4" href="rules.html">Rules</a></li>
         </ul>
         <div class="navbar-buttons mbr-section-btn"><a class="btn btn-info display-4" href="staff.html">Staff</a> 
-          <a class="btn btn-primary display-4" href="store.html"> 
+          <a class="btn btn-primary display-4" href="https:cazemcstore.paynow.store"> 
             <span class="mobi-mbri mobi-mbri-shopping-basket mbr-iconfont mbr-iconfont-btn"></span> Store
           </a>
         </div>
@@ -155,7 +155,7 @@
           <div class="icon-wrap w-100"><div class="icon-box"><span class="step-number mbr-fonts-style display-5">2</span></div></div>
           <div class="text-box">
             <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Add Server</strong></h4>
-            <p class="mbr-text mbr-black mbr-fonts-style display-4">Click “Add Server” and enter: <strong>CazeMC.xyz</strong></p>
+            <p class="mbr-text mbr-black mbr-fonts-style display-4">Click “Add Server” and enter: <strong>play.cazemc.xyz</strong></p>
           </div>
         </div>
       </div>
@@ -164,7 +164,7 @@
           <div class="icon-wrap w-100"><div class="icon-box"><span class="step-number mbr-fonts-style display-5">3</span></div></div>
           <div class="text-box">
             <h4 class="icon-title mbr-black mbr-fonts-style display-7"><strong>Play!</strong></h4>
-            <p class="mbr-text mbr-black mbr-fonts-style display-4">Double-click the server and enjoy thousands of players online!</p>
+            <p class="mbr-text mbr-black mbr-fonts-style display-4">Double-click the server and enjoy with players and grind</p>
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@
         <blockquote>
           <h5 class="mbr-section-title mbr-fonts-style mb-2 display-7"><strong>Our Story</strong></h5>
           <p class="mbr-text mbr-fonts-style display-4">
-            Founded In 2025 By A Person Called Wang Ling And His Comrades 
+            Founded In 2025 By Lakshay and CazeMC developing team 
           </p>
         </blockquote>
       </div>
